Avoid using IOSurfaces with premultipliedAlpha:false flag.

Core Animation doesn't have the ability to honor this flag. Fall back
to the regular OpenGL-based composition path in this case.

Finally add a pixel test for this.

BUG=599285

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I06ffe41b5080bab6d767472b0deb4b97142ead21