third_party/WebKit/Source/platform/graphics/gpu/DrawingBufferTestHelpers.h
@@ -429,7 +429,7 @@ class DrawingBufferForTests : public DrawingBuffer {
             client,
             false /* discardFramebufferSupported */,
             true /* wantAlphaChannel */,
-            false /* premultipliedAlpha */,
+            true /* premultipliedAlpha */,
             preserve,
             kWebGL1,
             false /* wantDepth */,
